turning front end into angular cli

--- a/pysys-challenge-web/src/index.html
+++ b/pysys-challenge-web/src/index.html
@@ -13,4 +13,9 @@
 <body>
   <app-root></app-root>
 </body>
+<script type="application/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/additional-methods.min.js"></script>
+<script type="application/javascript" src="assets/js/validate-form.js"></script>
 </html>
+
